--- a/kb.html
+++ b/kb.html
@@ -6055,6 +6055,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Haunt of Fear</td>
+<td>1954</td>
+<td>EC</td>
+<td><a href="HauntOfFear/HauntOfFear.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Haunted Man</td>
 <td>2000</td>
 <td>Dark Horse</td>
