--- a/kb.html
+++ b/kb.html
@@ -12898,6 +12898,13 @@ DC</td>
 </tr>
 
 <tr>
+<td>Weird Fantasy</td>
+<td>1953</td>
+<td>EC</td>
+<td><a href="WeirdFantasy/WeirdFantasy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Weird Tales</td>
 <td>1923</td>
 <td>Rual Publishing</td>
