--- a/kb.html
+++ b/kb.html
@@ -12905,6 +12905,20 @@ DC</td>
 </tr>
 
 <tr>
+<td>Weird Science</td>
+<td>1950</td>
+<td>EC</td>
+<td><a href="WeirdScience/WeirdScience.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Weird Science-Fantasy</td>
+<td>1952</td>
+<td>EC</td>
+<td><a href="WeirdScienceFantasy/WeirdScienceFantasy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Weird Tales</td>
 <td>1923</td>
 <td>Rual Publishing</td>
