--- a/StrangeTales/strangetales.html
+++ b/StrangeTales/strangetales.html
@@ -8,17 +8,11 @@
 </head>
 
 <body>
-<h2>Strange Tales</h2>
 <img src="strangetales001.jpg"><br>
-Publisher: <a href="../../Publisher/marvel.html">Marvel Comics</a> 1951<br>
-Illustrator: Jack Kirby, Steve Ditko, Jim Steranko<br>
-Writer: Jack Kirby, Steve Ditko, Jim Steranko<br>
-<br>
-Strange Tales is a Marvel Comics anthology series title that appeared and was revived in different forms on multiple occasions throughout the company's history. The title introduced the characters Doctor Strange and Nick Fury, Agent of S.H.I.E.L.D., and was a showcase for the science fiction/suspense stories of artists Jack Kirby and Steve Ditko, and for the ground breaking work of writer-artist Jim Steranko. 
-</p><p>
-Strange Tales was a horror title that often featured Monsters and various Science Fiction stories until issue #101 (Oct 1962)  when it began featuring Johnny Storm the Human Torch. Issue #110 (July 1963) contains the first Dr. Strange as a back page story, returning permanently with issue #114. Issue #146 is Steve Ditko's last issue, with Bill Everett starting on issue #147.
-</p><p>
-
+168 issues (#1-168) from 1951 - 1968, 20 issues (#169-188) 1973 - 1976,<br>
+19 issues (#1-19) 1987 -1988, 3 issues (#1 -3) 2009<br>
+<a href="../../Publisher/marvel.html">Marvel Comics</a>
+<p>
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -222,198 +216,11 @@ Strange Tales was a horror title that often featured Monsters and various Scienc
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 </div>
-
-<ul>
-<li><a href="strangetales001.html">Strange Tales #1</a></li>
-<li><a href="strangetales002.html">Strange Tales #2</a></li>
-<li><a href="strangetales003.html">Strange Tales #3</a></li>
-<li><a href="strangetales004.html">Strange Tales #4</a></li>
-<li><a href="strangetales005.html">Strange Tales #5</a></li>
-<li><a href="strangetales006.html">Strange Tales #6</a></li>
-<li><a href="strangetales007.html">Strange Tales #7</a></li>
-<li><a href="strangetales008.html">Strange Tales #8</a></li>
-<li><a href="strangetales009.html">Strange Tales #9</a></li>
-<li><a href="strangetales010.html">Strange Tales #10</a></li>
-<li><a href="strangetales011.html">Strange Tales #11</a></li>
-<li><a href="strangetales012.html">Strange Tales #12</a></li>
-<li><a href="strangetales013.html">Strange Tales #13</a></li>
-<li><a href="strangetales014.html">Strange Tales #14</a></li>
-<li><a href="strangetales015.html">Strange Tales #15</a></li>
-<li><a href="strangetales016.html">Strange Tales #16</a></li>
-<li><a href="strangetales017.html">Strange Tales #17</a></li>
-<li><a href="strangetales018.html">Strange Tales #18</a></li>
-<li><a href="strangetales019.html">Strange Tales #19</a></li>
-<li><a href="strangetales020.html">Strange Tales #20</a></li>
-<li><a href="strangetales021.html">Strange Tales #21</a></li>
-<li><a href="strangetales022.html">Strange Tales #22</a></li>
-<li><a href="strangetales023.html">Strange Tales #23</a></li>
-<li><a href="strangetales024.html">Strange Tales #24</a></li>
-<li><a href="strangetales025.html">Strange Tales #25</a></li>
-<li><a href="strangetales026.html">Strange Tales #26</a></li>
-<li><a href="strangetales027.html">Strange Tales #27</a></li>
-<li><a href="strangetales028.html">Strange Tales #28</a></li>
-<li><a href="strangetales029.html">Strange Tales #29</a></li>
-<li><a href="strangetales030.html">Strange Tales #30</a></li>
-<li><a href="strangetales031.html">Strange Tales #31</a></li>
-<li><a href="strangetales032.html">Strange Tales #32</a></li>
-<li><a href="strangetales033.html">Strange Tales #33</a></li>
-<li><a href="strangetales034.html">Strange Tales #34</a></li>
-<li><a href="strangetales035.html">Strange Tales #35</a></li>
-<li><a href="strangetales036.html">Strange Tales #36</a></li>
-<li><a href="strangetales037.html">Strange Tales #37</a></li>
-<li><a href="strangetales038.html">Strange Tales #38</a></li>
-<li><a href="strangetales039.html">Strange Tales #39</a></li>
-<li><a href="strangetales040.html">Strange Tales #40</a></li>
-<li><a href="strangetales041.html">Strange Tales #41</a></li>
-<li><a href="strangetales042.html">Strange Tales #42</a></li>
-<li><a href="strangetales043.html">Strange Tales #43</a></li>
-<li><a href="strangetales044.html">Strange Tales #44</a></li>
-<li><a href="strangetales045.html">Strange Tales #45</a></li>
-<li><a href="strangetales046.html">Strange Tales #46</a></li>
-<li><a href="strangetales047.html">Strange Tales #47</a></li>
-<li><a href="strangetales048.html">Strange Tales #48</a></li>
-<li><a href="strangetales049.html">Strange Tales #49</a></li>
-<li><a href="strangetales050.html">Strange Tales #50</a></li>
-<li><a href="strangetales051.html">Strange Tales #51</a></li>
-<li><a href="strangetales052.html">Strange Tales #52</a></li>
-<li><a href="strangetales053.html">Strange Tales #53</a></li>
-<li><a href="strangetales054.html">Strange Tales #54</a></li>
-<li><a href="strangetales055.html">Strange Tales #55</a></li>
-<li><a href="strangetales056.html">Strange Tales #56</a></li>
-<li><a href="strangetales057.html">Strange Tales #57</a></li>
-<li><a href="strangetales058.html">Strange Tales #58</a></li>
-<li><a href="strangetales059.html">Strange Tales #59</a></li>
-<li><a href="strangetales060.html">Strange Tales #60</a></li>
-<li><a href="strangetales061.html">Strange Tales #61</a></li>
-<li><a href="strangetales062.html">Strange Tales #62</a></li>
-<li><a href="strangetales063.html">Strange Tales #63</a></li>
-<li><a href="strangetales064.html">Strange Tales #64</a></li>
-<li><a href="strangetales065.html">Strange Tales #65</a></li>
-<li><a href="strangetales066.html">Strange Tales #66</a></li>
-<li><a href="strangetales067.html">Strange Tales #67</a></li>
-<li><a href="strangetales068.html">Strange Tales #68</a></li>
-<li><a href="strangetales069.html">Strange Tales #69</a></li>
-<li><a href="strangetales070.html">Strange Tales #70</a></li>
-<li><a href="strangetales071.html">Strange Tales #71</a></li>
-<li><a href="strangetales072.html">Strange Tales #72</a></li>
-<li><a href="strangetales073.html">Strange Tales #73</a></li>
-<li><a href="strangetales074.html">Strange Tales #74</a></li>
-<li><a href="strangetales075.html">Strange Tales #75</a></li>
-<li><a href="strangetales076.html">Strange Tales #76</a></li>
-<li><a href="strangetales077.html">Strange Tales #77</a></li>
-<li><a href="strangetales078.html">Strange Tales #78</a></li>
-<li><a href="strangetales079.html">Strange Tales #79</a></li>
-<li><a href="strangetales080.html">Strange Tales #80</a></li>
-<li><a href="strangetales081.html">Strange Tales #81</a></li>
-<li><a href="strangetales082.html">Strange Tales #82</a></li>
-<li><a href="strangetales083.html">Strange Tales #83</a></li>
-<li><a href="strangetales084.html">Strange Tales #84</a></li>
-<li><a href="strangetales085.html">Strange Tales #85</a></li>
-<li><a href="strangetales086.html">Strange Tales #86</a></li>
-<li><a href="strangetales087.html">Strange Tales #87</a></li>
-<li><a href="strangetales088.html">Strange Tales #88</a></li>
-<li><a href="strangetales089.html">Strange Tales #89</a></li>
-<li><a href="strangetales090.html">Strange Tales #90</a></li>
-<li><a href="strangetales091.html">Strange Tales #91</a></li>
-<li><a href="strangetales092.html">Strange Tales #92</a></li>
-<li><a href="strangetales093.html">Strange Tales #93</a></li>
-<li><a href="strangetales094.html">Strange Tales #94</a></li>
-<li><a href="strangetales095.html">Strange Tales #95</a></li>
-<li><a href="strangetales096.html">Strange Tales #96</a></li>
-<li><a href="strangetales097.html">Strange Tales #97</a></li>
-<li><a href="strangetales098.html">Strange Tales #98</a></li>
-<li><a href="strangetales099.html">Strange Tales #99</a></li>
-<li><a href="strangetales100.html">Strange Tales #100</a></li>
-<li><a href="strangetales101.html">Strange Tales #101</a> Featuring the Human Torch</li>
-<li><a href="strangetales102.html">Strange Tales #102</a></li>
-<li><a href="strangetales103.html">Strange Tales #103</a></li>
-<li><a href="strangetales104.html">Strange Tales #104</a></li>
-<li><a href="strangetales105.html">Strange Tales #105</a></li>
-<li><a href="strangetales106.html">Strange Tales #106</a></li>
-<li><a href="strangetales107.html">Strange Tales #107</a></li>
-<li><a href="strangetales108.html">Strange Tales #108</a></li>
-<li><a href="strangetales109.html">Strange Tales #109</a></li>
-<li><a href="strangetales110.html">Strange Tales #110</a></li>
-<li><a href="strangetales110b.html">Strange Tales #110b</a> Featuring Doctor Strange until #168</li>
-<li><a href="strangetales111.html">Strange Tales #111</a></li>
-<li><a href="strangetales112.html">Strange Tales #112</a></li>
-<li><a href="strangetales113.html">Strange Tales #113</a></li>
-<li><a href="strangetales114.html">Strange Tales #114</a></li>
-<li><a href="strangetales115.html">Strange Tales #115</a></li>
-<li><a href="strangetales116.html">Strange Tales #116</a></li>
-<li><a href="strangetales117.html">Strange Tales #117</a></li>
-<li><a href="strangetales118.html">Strange Tales #118</a></li>
-<li><a href="strangetales119.html">Strange Tales #119</a></li>
-<li><a href="strangetales120.html">Strange Tales #120</a></li>
-<li><a href="strangetales121.html">Strange Tales #121</a></li>
-<li><a href="strangetales122.html">Strange Tales #122</a></li>
-<li><a href="strangetales123.html">Strange Tales #123</a></li>
-<li><a href="strangetales124.html">Strange Tales #124</a></li>
-<li><a href="strangetales125.html">Strange Tales #125</a></li>
-<li><a href="strangetales126.html">Strange Tales #126</a></li>
-<li><a href="strangetales127.html">Strange Tales #127</a></li>
-<li><a href="strangetales128.html">Strange Tales #128</a></li>
-<li><a href="strangetales129.html">Strange Tales #129</a></li>
-<li><a href="strangetales130.html">Strange Tales #130</a></li>
-<li><a href="strangetales131.html">Strange Tales #131</a></li>
-<li><a href="strangetales132.html">Strange Tales #132</a></li>
-<li><a href="strangetales133.html">Strange Tales #133</a></li>
-<li><a href="strangetales134.html">Strange Tales #134</a></li>
-<li><a href="strangetales135.html">Strange Tales #135</a></li>
-<li><a href="strangetales136.html">Strange Tales #136</a></li>
-<li><a href="strangetales137.html">Strange Tales #137</a></li>
-<li><a href="strangetales138.html">Strange Tales #138</a></li>
-<li><a href="strangetales139.html">Strange Tales #139</a></li>
-<li><a href="strangetales140.html">Strange Tales #140</a></li>
-<li><a href="strangetales141.html">Strange Tales #141</a></li>
-<li><a href="strangetales142.html">Strange Tales #142</a></li>
-<li><a href="strangetales143.html">Strange Tales #143</a></li>
-<li><a href="strangetales144.html">Strange Tales #144</a></li>
-<li><a href="strangetales145.html">Strange Tales #145</a></li>
-<li><a href="strangetales146.html">Strange Tales #146</a> Last Steve Ditko</li>
-<li><a href="strangetales147.html">Strange Tales #147</a></li>
-<li><a href="strangetales148.html">Strange Tales #148</a></li>
-<li><a href="strangetales149.html">Strange Tales #149</a></li>
-<li><a href="strangetales150.html">Strange Tales #150</a></li>
-<li><a href="strangetales151.html">Strange Tales #151</a></li>
-<li><a href="strangetales152.html">Strange Tales #152</a></li>
-<li><a href="strangetales153.html">Strange Tales #153</a></li>
-<li><a href="strangetales154.html">Strange Tales #154</a></li>
-<li><a href="strangetales155.html">Strange Tales #155</a></li>
-<li><a href="strangetales156.html">Strange Tales #156</a></li>
-<li><a href="strangetales157.html">Strange Tales #157</a></li>
-<li><a href="strangetales158.html">Strange Tales #158</a></li>
-<li><a href="strangetales159.html">Strange Tales #159</a></li>
-<li><a href="strangetales160.html">Strange Tales #160</a></li>
-<li><a href="strangetales161.html">Strange Tales #161</a></li>
-<li><a href="strangetales162.html">Strange Tales #162</a></li>
-<li><a href="strangetales163.html">Strange Tales #163</a></li>
-<li><a href="strangetales164.html">Strange Tales #164</a></li>
-<li><a href="strangetales165.html">Strange Tales #165</a></li>
-<li><a href="strangetales166.html">Strange Tales #166</a></li>
-<li><a href="strangetales167.html">Strange Tales #167</a></li>
-<li><a href="strangetales168.html">Strange Tales #168</a> Story continues in the first <a href="../DoctorStrange/DoctorStrange.html">Doctor Strange</a> #169.</li>
-<li><a href="strangetales169.html">Strange Tales #169</a> Featuring Brother Voodoo</li>
-<li><a href="strangetales170.html">Strange Tales #170</a></li>
-<li><a href="strangetales171.html">Strange Tales #171</a></li>
-<li><a href="strangetales172.html">Strange Tales #172</a></li>
-<li><a href="strangetales173.html">Strange Tales #173</a></li>
-<li><a href="strangetales174.html">Strange Tales #174</a> Featuring The Golem</li>
-<li><a href="strangetales175.html">Strange Tales #175</a></li>
-<li><a href="strangetales176.html">Strange Tales #176</a></li>
-<li><a href="strangetales177.html">Strange Tales #177</a></li>
-<li><a href="strangetales178.html">Strange Tales #178</a> Featuring Adam Warlock</li>
-<li><a href="strangetales179.html">Strange Tales #179</a></li>
-<li><a href="strangetales180.html">Strange Tales #180</a></li>
-<li><a href="strangetales181.html">Strange Tales #181</a></li>
-<li><a href="strangetales182.html">Strange Tales #182</a></li>
-<li><a href="strangetales183.html">Strange Tales #183</a></li>
-<li><a href="strangetales184.html">Strange Tales #184</a></li>
-<li><a href="strangetales185.html">Strange Tales #185</a></li>
-<li><a href="strangetales186.html">Strange Tales #186</a></li>
-<li><a href="strangetales187.html">Strange Tales #187</a></li>
-<li><a href="strangetales188.html">Strange Tales #188</a> Last issue</li>
-</ul>
+</p><p>
+Strange Tales is a Marvel Comics anthology series title that appeared and was revived in different forms on multiple occasions throughout the company's history. The title introduced the characters Doctor Strange and Nick Fury, Agent of S.H.I.E.L.D., and was a showcase for the science fiction/suspense stories of artists Jack Kirby and Steve Ditko, and for the ground breaking work of writer-artist Jim Steranko. 
+</p><p>
+Strange Tales was a horror title that often featured Monsters and various Science Fiction stories until issue #101 (Oct 1962)  when it began featuring Johnny Storm the Human Torch. Issue #110 (July 1963) contains the first Dr. Strange as a back page story, returning permanently with issue #114. Issue #146 is Steve Ditko's last issue, with Bill Everett starting on issue #147.
+</p>
 
 </body>
 </html>
