--- a/kb.html
+++ b/kb.html
@@ -1416,6 +1416,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Animated Comics</td>
+<td>1946</td>
+<td>EC</td>
+<td><a href="AnimatedComics/AnimatedComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Animax</td>
 <td>1986</td>
 <td>Marvel</td>
@@ -3571,6 +3578,13 @@ Creative Knowledgebase<br>
 <td>1947</td>
 <td>EC</td>
 <td><a href="International/International.html">Details</a></td>
+</tr>
+
+<tr>
+<td>CrimeSuspen Stories</td>
+<td>1950</td>
+<td>EC</td>
+<td><a href="CrimeSuspenStories/CrimeSuspenStories.html">Details</a></td>
 </tr>
 
 <tr>
