--- a/CrimeIllustrated/CrimeIllustrated.html
+++ b/CrimeIllustrated/CrimeIllustrated.html
@@ -2,17 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title> Crime Illustrated </title>
 </head>
 
 <body>
-<img src="CrimeIllustrated1.jpg"> <img src="CrimeIllustrated2.jpg"><br>
-Series: 2 issues 1955<br>
+<img src="CrimeIllustrated1.jpg" title="cover by Joe Orlando"><br>
+Series: 3 issues 1955<br>
 Publisher: EC<br>
-Written by Al Feldstein<br>
-Illustrations by Joe Orlando<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="CrimeIllustrated1.jpg" title="cover by Joe Orlando"></div>
+<div class="mySlides" style="text-align: center;"><img src="CrimeIllustrated2.jpg" title="cover by Reed Crandall"></div>
+<div class="mySlides" style="text-align: center;"><img src="CrimeIllustrated3.jpg" title="cover by Reed Crandall"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Introducing Picto-Fiction, which is not photographic, but rather an illustration per page along with the story, no word balloons. It didn't really catch on, but I like the idea, less interference to the art and more flexibility for creative writing.
 </p>
 </body>
