--- a/kb.html
+++ b/kb.html
@@ -3763,6 +3763,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Dandy</td>
+<td>1947</td>
+<td>EC</td>
+<td><a href="Dandy/Dandy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Danger Unlimited</td>
 <td>1995</td>
 <td>Dark Horse</td>
