--- a/kb.html
+++ b/kb.html
@@ -4625,6 +4625,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Dumbunnies</td>
+<td>1939</td>
+<td>Wheelan</td>
+<td><a href="Dumbunnies/Dumbunnies.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dune</td>
 <td>1965</td>
 <td>Chilton Books</td>
@@ -5135,6 +5142,13 @@ Creative Knowledgebase<br>
 <td>1980</td>
 <td>Universal Press Syndicate</td>
 <td><a href="FarSide/FarSide.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fat and Slat</td>
+<td>1947</td>
+<td>EC</td>
+<td><a href="FatAndSlat/FatAndSlat.html">Details</a></td>
 </tr>
 
 <tr>
