--- a/kb.html
+++ b/kb.html
@@ -5411,6 +5411,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Frontline Combat</td>
+<td>1951</td>
+<td>EC</td>
+<td><a href="FrontlineCombat/FrontlineCombat.html">Details</a> </td>
+</tr>
+
+<tr>
 <td>Funnies</td>
 <td>1929</td>
 <td>Dell</td>
