--- a/kb.html
+++ b/kb.html
@@ -2058,7 +2058,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Beano</td>
 <td>1938</td>
-<td>DC Thompson</td>
+<td>DC Thomson</td>
 <td><a href="Beano/Beano.html">Details</a></td>
 </tr>
 
@@ -7868,6 +7868,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Magic Comic</td>
+<td>1930</td>
+<td>DC Thomson</td>
+<td><a href="MagicComic/MagicComic.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magik</td>
 <td>1984</td>
 <td>Marvel</td>
@@ -13188,6 +13195,13 @@ Creative Knowledgebase<br>
 <td>2004</td>
 <td>Marvel</td>
 <td><a href="Witches/Witches.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wizard</td>
+<td>1922</td>
+<td>DC Thomson</td>
+<td><a href="Wizard/Wizard.html">Details</a></td>
 </tr>
 
 <tr>
