--- a/HouseOfMystery/HouseOfMystery.html
+++ b/HouseOfMystery/HouseOfMystery.html
@@ -8,22 +8,10 @@
 </head>
 
 <body>
-House of Mystery<br>
 <img src="1951HOM001.jpg"> <br>
-Series: First 321 issues 1951-1983; Second 42 issues 2008-2011<br>
-Publisher: DC, Vertigo (DC)<br>
+Series: 321 issues 1951-1983; 42 issues 2008-2011<br>
+Publisher: DC, Vertigo<br>
 <p>
-The House of Mystery is the name of several horror, fantasy, and mystery Comics anthologies published by DC Comics. It had a companion series, House of Secrets. It is also the name of the titular setting of the series.
-</p><p>
-House of Mystery started out as a horror anthology, featuring tales of the supernatural as well as supernatural-themed mystery stories. With the growing backlash against American horror comics in the mid-1950s, as well as the advent of the Comics Code Authority and its restrictions on horror-themed storylines (banning stories dealing with such supernatural fare as werewolves and vampires), the series quietly was revamped into dealing with science-fiction type monsters and other mystery-suspense type tales that were permitted by the comic code.
-</p><p>
-With issue #174, EC Comics veteran Joe Orlando was hired by DC to take over as editor of House of Mystery. As the Comics Code Authority was now being challenged by both DC and Marvel over content restrictions, the series returned to its overt horror themes. The first issue under Orlando would be a reprint issue of old horror/suspense stories, as the new direction would truly begin with #175 (July–August 1968). The issue would introduce a new figure to the series, Cain, the "able care taker" of the House of Mystery who would introduce nearly all stories that would run in the series before its cancellation. Cain would also host the spin-off humor series Plop! and later become a recurring character in Blue Devil and The Sandman.
-</p><p>
-DC's Vertigo imprint began a second series in May 2008, written by Lilah Sturges and Bill Willingham. It features at least one different story each issue, told by people trapped in a "purgatory-like house" a supernatural bar, trying to solve the mystery of how and why they're imprisoned there. Each one has a terrible past they'd like to forget, and with no books, newspapers or TV allowed in the House, they face an eternity of boredom. But stories become the new currency, and fortunately, the House attracts only the finest storytellers.
-</p><p>
-The second series ended in October 2011 with issue #42.
-</p><p>
-
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -52,7 +40,6 @@ The second series ended in October 2011 with issue #42.
 <div class="mySlides" style="text-align: center;"><img src="1951HOM018.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1951HOM019.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1951HOM020.jpg"></div>
-
 <div class="mySlides" style="text-align: center;"><img src="HouseOfMystery1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HouseOfMystery2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HouseOfMystery3.jpg"></div>
@@ -77,6 +64,16 @@ The second series ended in October 2011 with issue #42.
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+The House of Mystery is the name of several horror, fantasy, and mystery Comics anthologies published by DC Comics. It had a companion series, House of Secrets. It is also the name of the titular setting of the series.
+</p><p>
+House of Mystery started out as a horror anthology, featuring tales of the supernatural as well as supernatural-themed mystery stories. With the growing backlash against American horror comics in the mid-1950s, as well as the advent of the Comics Code Authority and its restrictions on horror-themed storylines (banning stories dealing with such supernatural fare as werewolves and vampires), the series quietly was revamped into dealing with science-fiction type monsters and other mystery-suspense type tales that were permitted by the comic code.
+</p><p>
+With issue #174, EC Comics veteran Joe Orlando was hired by DC to take over as editor of House of Mystery. As the Comics Code Authority was now being challenged by both DC and Marvel over content restrictions, the series returned to its overt horror themes. The first issue under Orlando would be a reprint issue of old horror/suspense stories, as the new direction would truly begin with #175 (July–August 1968). The issue would introduce a new figure to the series, Cain, the "able care taker" of the House of Mystery who would introduce nearly all stories that would run in the series before its cancellation. Cain would also host the spin-off humor series Plop! and later become a recurring character in Blue Devil and The Sandman.
+</p><p>
+DC's Vertigo imprint began a second series in May 2008, written by Lilah Sturges and Bill Willingham. It features at least one different story each issue, told by people trapped in a "purgatory-like house" a supernatural bar, trying to solve the mystery of how and why they're imprisoned there. Each one has a terrible past they'd like to forget, and with no books, newspapers or TV allowed in the House, they face an eternity of boredom. But stories become the new currency, and fortunately, the House attracts only the finest storytellers.
+</p><p>
+The second series ended in October 2011 with issue #42.
 
 </p>
 </body>
