--- a/kb.html
+++ b/kb.html
@@ -6600,6 +6600,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Impact</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="ImpactEC/ImpactEC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Impact Video Magazine</td>
 <td>1989</td>
 <td>MPI</td>
