--- a/kb.html
+++ b/kb.html
@@ -9779,6 +9779,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Panic</td>
+<td>1954</td>
+<td>EC</td>
+<td><a href="Panic/Panic.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pantheon Books</td>
 <td>1942</td>
 <td>Publisher</td>
