--- a/kb.html
+++ b/kb.html
@@ -5089,6 +5089,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Fantastic Comics</td>
+<td>1939</td>
+<td>Fox</td>
+<td><a href="FantasticComics/FantasticComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantastic Fears</td>
 <td>1954</td>
 <td>Farrell</td>
@@ -7735,6 +7742,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Lou Fine</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="LouFine/LouFine.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Louis Wain</td>
 <td>1900</td>
 <td>Creator</td>
@@ -8873,6 +8887,13 @@ Creative Knowledgebase<br>
 <td>1969</td>
 <td>BBC</td>
 <td><a href="MontyPython/MontyPython.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Moon Girl</td>
+<td>1947</td>
+<td>EC</td>
+<td><a href="MoonGirl/MoonGirl.html">Details</td>
 </tr>
 
 <tr>
