--- a/kb.html
+++ b/kb.html
@@ -998,7 +998,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>All Top</td>
 <td>1944</td>
-<td>Fox Features</td>
+<td>Fox</td>
 <td><a href="AllTop/AllTop.html">Details</a></td>
 </tr>
 
@@ -5341,6 +5341,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Fox Comics</td>
+<td>1939</td>
+<td>Publisher</td>
+<td><a href="FoxComics/FoxComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fraggle Rock</td>
 <td>1983</td>
 <td>Jim Henson Productions</td>
@@ -9116,7 +9123,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Mystery Men</td>
 <td>1939</td>
-<td>Fox Feature</td>
+<td>Fox</td>
 <td><a href="MysteryMen/MysteryMen.html">Details</a></td>
 </tr>
 
@@ -9893,7 +9900,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Phantom Lady</td>
 <td>1947</td>
-<td>Fox Features</td>
+<td>Fox</td>
 <td><a href="PhantomLady/PhantomLady.html">Details</a></td>
 </tr>
 
@@ -13263,7 +13270,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Wonder Comics</td>
 <td>1939</td>
-<td>Fox Features</td>
+<td>Fox</td>
 <td><a href="WonderComics/WonderComics.html">Details</a></td>
 </tr>
 
@@ -13564,7 +13571,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Zoot</td>
 <td>1946</td>
-<td>Fox Feature</td>
+<td>Fox</td>
 <td><a href="Zoot/Zoot.html">Details</a></td>
 </tr>
 
