--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -26,6 +26,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Kirby06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby07.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby09.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
