--- a/kb.html
+++ b/kb.html
@@ -998,7 +998,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>All Top</td>
 <td>1944</td>
-<td>Fox</td>
+<td>Fox Features</td>
 <td><a href="AllTop/AllTop.html">Details</a></td>
 </tr>
 
@@ -2058,7 +2058,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Beano</td>
 <td>1938</td>
-<td>DC Thomson</td>
+<td>DC Thompson</td>
 <td><a href="Beano/Beano.html">Details</a></td>
 </tr>
 
@@ -5089,13 +5089,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Fantastic Comics</td>
-<td>1939</td>
-<td>Fox</td>
-<td><a href="FantasticComics/FantasticComics.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Fantastic Fears</td>
 <td>1954</td>
 <td>Farrell</td>
@@ -5338,13 +5331,6 @@ Creative Knowledgebase<br>
 <td>1938</td>
 <td>Dell</td>
 <td><a href="FourColor/FourColor.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Fox Comics</td>
-<td>1939</td>
-<td>Publisher</td>
-<td><a href="FoxComics/FoxComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6614,13 +6600,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Impact</td>
-<td>1955</td>
-<td>EC</td>
-<td><a href="ImpactEC/ImpactEC.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Impact Video Magazine</td>
 <td>1989</td>
 <td>MPI</td>
@@ -7749,13 +7728,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Lou Fine</td>
-<td>1914</td>
-<td>Creator</td>
-<td><a href="LouFine/LouFine.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Louis Wain</td>
 <td>1900</td>
 <td>Creator</td>
@@ -7893,13 +7865,6 @@ Creative Knowledgebase<br>
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Madballs/Madballs.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Magic Comic</td>
-<td>1930</td>
-<td>DC Thomson</td>
-<td><a href="MagicComic/MagicComic.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8897,13 +8862,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Moon Girl</td>
-<td>1947</td>
-<td>EC</td>
-<td><a href="MoonGirl/MoonGirl.html">Details</td>
-</tr>
-
-<tr>
 <td>Moon Girl and Devil Dinosaur</td>
 <td>2016</td>
 <td>Marvel</td>
@@ -9123,7 +9081,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Mystery Men</td>
 <td>1939</td>
-<td>Fox</td>
+<td>Fox Feature</td>
 <td><a href="MysteryMen/MysteryMen.html">Details</a></td>
 </tr>
 
@@ -9807,13 +9765,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Panic</td>
-<td>1954</td>
-<td>EC</td>
-<td><a href="Panic/Panic.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Pantheon Books</td>
 <td>1942</td>
 <td>Publisher</td>
@@ -9900,7 +9851,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Phantom Lady</td>
 <td>1947</td>
-<td>Fox</td>
+<td>Fox Features</td>
 <td><a href="PhantomLady/PhantomLady.html">Details</a></td>
 </tr>
 
@@ -13240,13 +13191,6 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Wizard</td>
-<td>1922</td>
-<td>DC Thomson</td>
-<td><a href="Wizard/Wizard.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Wolf and Red</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -13270,7 +13214,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Wonder Comics</td>
 <td>1939</td>
-<td>Fox</td>
+<td>Fox Features</td>
 <td><a href="WonderComics/WonderComics.html">Details</a></td>
 </tr>
 
@@ -13571,7 +13515,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Zoot</td>
 <td>1946</td>
-<td>Fox</td>
+<td>Fox Feature</td>
 <td><a href="Zoot/Zoot.html">Details</a></td>
 </tr>
 
