--- a/kb.html
+++ b/kb.html
@@ -928,7 +928,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Alien 3</td>
 <td>1992</td>
-<td>Fox, Dark Horse</td>
+<td>Fox</td>
 <td><a href="Alien3/Alien3.html">Details</a></td>
 </tr>
 
@@ -998,7 +998,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>All Top</td>
 <td>1944</td>
-<td>Fox Features</td>
+<td>Fox</td>
 <td><a href="AllTop/AllTop.html">Details</a></td>
 </tr>
 
@@ -9858,7 +9858,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Phantom Lady</td>
 <td>1947</td>
-<td>Fox Features</td>
+<td>Fox</td>
 <td><a href="PhantomLady/PhantomLady.html">Details</a></td>
 </tr>
 
@@ -13221,7 +13221,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Wonder Comics</td>
 <td>1939</td>
-<td>Fox Features</td>
+<td>Fox</td>
 <td><a href="WonderComics/WonderComics.html">Details</a></td>
 </tr>
 
@@ -13522,7 +13522,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Zoot</td>
 <td>1946</td>
-<td>Fox Feature</td>
+<td>Fox</td>
 <td><a href="Zoot/Zoot.html">Details</a></td>
 </tr>
 
