--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -31,6 +31,8 @@
 <div class="mySlides" style="text-align: center;"><img src="Kirby11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
