Crypt of Shadows

--- a/CryptOfShadows/CryptOfShadows.html
+++ b/CryptOfShadows/CryptOfShadows.html
@@ -2,19 +2,52 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Crypt of Shadows</title>
 </head>
 
 <body>
-<h2>Crypt of Shadows</h2>
-<img src="CryptOfShadows.jpg"> <br>
-Cover: Gil Kane<br>
-Writer: Stan Lee<br>
-Series: On-going, 21 issues<br>
-Publisher: 1973 Marvel<br>
+<img src="CryptOfShadows01.jpg" title="cover by Gil Kane"> <br>
+21 issues from 1973-1975, 1 issue 2019 by Marvel<br>
 <p>
-All short story horror reprints:<ul>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows01.jpg" title="cover by Gil Kane"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows02.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows03.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows04.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows05.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows06.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows07.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows08.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows09.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows10.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows11.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows12.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows13.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows14.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows15.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows16.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows17.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows18.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows19.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows20.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows21.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows22.jpg" title="cover by Jim Starlin"></div>
+<div class="mySlides" style="text-align: center;"><img src="CryptOfShadows23.jpg" title="cover by Jim Starlin"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Horror anthology reprints:<ul>
 <li>Midnight on Black Mountain: A woman with a terminal illness meets a man who tricks her into becoming a witch. Illustrated by Mort Lawrence.</li>
 <li>Where Monsters Dwell: A scientist finds a way to exile his enemies to another dimension, but one manages to escape and change places with the scientist. Illustrated by Basil Wolverton</li>
 <li>Don't Look! Illustrated by Jay Scott Pike.</li>
