--- a/kb.html
+++ b/kb.html
@@ -8778,6 +8778,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Mister Mystery</td>
+<td>1951</td>
+<td>Stanley Morse</td>
+<td><a href="MisterMystery/MisterMystery.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Misty</td>
 <td>1972</td>
 <td>Marvel</td>
