--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-Weird Tales<br>
 <img src="WeirdTales1923issue001.jpg"> <br>
-Series: 1923 Fantasy and Horror Pulp Fiction Magazine<br>
-Publisher: Rural Publishing<br>
+1923 - 2014 (not sequentially) The biggest American Fantasy and Horror Pulp Fiction Magazine by Rural Publishing<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
