--- a/kb.html
+++ b/kb.html
@@ -3331,7 +3331,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Conan</td>
 <td>1932</td>
-<td>Weird Tales</td>
+<td>Rual Publishing</td>
 <td><a href="Conan/Conan.html">Details</a></td>
 </tr>
 
@@ -7401,7 +7401,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Kull</td>
 <td>1929</td>
-<td>Weird Tales</td>
+<td>Rual Publishing</td>
 <td><a href="Kull/Kull.html">Details</a></td>
 </tr>
 
