--- a/kb.html
+++ b/kb.html
@@ -975,6 +975,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>All American</td>
+<td>1939</td>
+<td>DC</td>
+<td><a href="AllAmerican/AllAmerican.html">Details</a></td>
+</tr>
+
+<tr>
 <td>All Star</td>
 <td>1940</td>
 <td>DC</td>
