--- a/kb.html
+++ b/kb.html
@@ -10799,7 +10799,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Scooby-Doo</td>
 <td>1969</td>
-<td>Hanna Barbera</td>
+<td>Hanna-Barbera</td>
 <td><a href="ScoobyDoo/ScoobyDoo.html">Details</a></td>
 </tr>
 
@@ -11548,7 +11548,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Spy Seal</td>
 <td>2017</td>
-<td>image</td>
+<td>Image</td>
 <td><a href="SpySeal/SpySeal.html">Details</a></td>
 </tr>
 
@@ -13389,7 +13389,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Yogi Bear</td>
 <td>1958</td>
-<td>Hanna Barbera</td>
+<td>Hanna-Barbera</td>
 <td><a href="YogiBear/YogiBear.html">Details</a></td>
 </tr>
 
