--- a/GhostComics/GhostComics.html
+++ b/GhostComics/GhostComics.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>title</title>
+<title>Ghost Comics</title>
 </head>
 
 <body>
-<img src=" "> <br>
+<img src="GhostComics01.jpg" title="cover art by Maurice Whitman"><br>
 
 <p>
 <div class="row"><div class="column">
@@ -19,13 +19,28 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=" "></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GhostComics11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Issue #1: 
+<li>The Banshee Bells, script by Drew Murdoch, art by Iger Studios and Alex Blum. A convict escapes from chain gang and is commandeered by the ghost of his evil brother to commit crimes like he did. 
+<li>Phantoms From the Sea, art by Iger Studios and Rafael Astarita; Pilot has to watch his carrier go down in a Japanese kamikaze attack, but survives because a ghostly double of his ship refuels him. 
+<li>Flee the Phantoms, art by Iger Studios and Alex Blum; After a car crash the driver gets a ride on the phantom bus transporting the deceased into the afterworld. 
+<li>The Parting, script by Drew Murdoch, art by Iger Studios and Alex Blum; The evil doll "Mr. Dingle" seduces Russell Burke to a life of crime.
 </p>
+
 </body>
 </html>
