--- a/kb.html
+++ b/kb.html
@@ -5670,6 +5670,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Ghost Comics</td>
+<td>1951</td>
+<td>Fiction House</td>
+<td><a href="GhostComics/GhostComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ghost in the Shell</td>
 <td>1989</td>
 <td>Dark Horse</td>
