--- a/kb.html
+++ b/kb.html
@@ -3077,6 +3077,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Chilling Adventures in Sorcery</td>
+<td>1972</td>
+<td>Archie</td>
+<td><a href="ChillingAdventuresInSorcery/ChillingAdventuresInSorcery.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cholly and Flytrap</td>
 <td>1990</td>
 <td>Epic</td>
@@ -12971,6 +12978,13 @@ Creative Knowledgebase<br>
 <td>1953</td>
 <td>EC</td>
 <td><a href="WeirdFantasy/WeirdFantasy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Weird Mysteries</td>
+<td>1952</td>
+<td>Stanley Morse</td>
+<td><a href="WeirdMysteries/WeirdMysteries.html">Details</a></td>
 </tr>
 
 <tr>
